Replace curf with csrf-csrf

--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "constate": "^3.3.0",
     "cookie-parser": "^1.4.7",
     "core-js": "^3.39.0",
+    "csrf-csrf": "^3.1.0",
     "css-loader": "^7.1.1",
-    "csurf": "^1.11.0",
     "date-fns": "^4.1.0",
     "del-cli": "^6.0.0",
     "dotenv": "^16.4.7",
