--- a/sample.env
+++ b/sample.env
@@ -115,3 +115,5 @@ OAUTH2_AUTH_URL=http://anyurl/o/authorize
 # Investment S3 Bucket for evidence uploads
 INVESTMENT_DOCUMENT_BUCKET=https://lookInVault.com/
 INVESTMENT_DOCUMENT_AWS_REGION=lookInVault
+
+CSRF_SECRET=csrf-dev-secret
